<resources>
    <string name="app_name">FoodDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_diary">Diary</string>
    <string name="nav_weight">Weight</string>
    <string name="nav_donate">Donate</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="btn_login">Zaloguj się</string>
    <string name="btn_register">Zarejestruj się</string>
    <string name="error_login">Błąd logowania</string>
    <string name="success_register">Konto zarejestrowano pomyślnie</string>
    <string name="error_register">Błąd rejestracji</string>
    <string name="breakfast">Śniadanie</string>
    <string name="dinner">Obiad</string>
    <string name="supper">Kolacja</string>
    <string name="snacks">Przekąski</string>
    <string name="error_occured">Wystąpił błąd</string>
    <string name="confirm">Potwierdź</string>
    <string name="name">Nazwa</string>
    <string name="calories">Kaloryczność</string>
    <string name="protein">Białko</string>
    <string name="fat">Tłuszcz</string>
    <string name="carbs">Węglowodany</string>
    <string name="mass">Waga</string>
    <string name="g">g</string>
    <string name="kcal">kcal</string>
    <string name="dismiss">Anuluj</string>
    <string name="_0">0</string>
    <string name="delete">Usuń</string>
    <string name="_80">80</string>
    <string name="kg">kg</string>
    <string name="pay">Zapłać</string>
    <string name="pln">PLN</string>
    <string name="card">Numer karty kredytowej</string>
    <string name="CVC">CVC</string>
    <string name="MM">MM</string>
    <string name="YYYY">YYYY</string>
    <string name="thanks_for_donate">Dziękujemy za wsparcie!</string>
    <string name="delete_weights">Czy chcesz usunąć wpis?</string>
</resources>