<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_diary">

    <fragment
        android:id="@+id/nav_diary"
        android:name="wat.fooddiary.ui.diary.DiaryFragment"
        android:label="@string/nav_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_weight"
        android:name="wat.fooddiary.ui.weight.WeightFragment"
        android:label="@string/nav_weight"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="wat.fooddiary.ui.donate.DonateFragment"
        android:label="@string/nav_donate"
        tools:layout="@layout/fragment_donate" />
</navigation>