<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.diary.DiaryFragment">

    <LinearLayout
        android:id="@+id/layWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_80"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="@dimen/text_large" />

    </LinearLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layWeight"
        android:layout_margin="@dimen/margin_large"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:layout_alignStart="@id/datePicker"
        android:layout_alignEnd="@id/datePicker"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfirm"
        android:layout_alignStart="@id/datePicker"
        android:layout_alignEnd="@id/datePicker"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:visibility="gone" />

</RelativeLayout>