<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.diary.DiaryFragment">

    <TextView
        android:id="@+id/tvDeleteWeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/delete_weights"
        android:textSize="@dimen/text_large" />

    <TextView
        android:id="@+id/btnDismiss"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDeleteWeight"
        android:layout_alignTop="@id/btnDelete"
        android:layout_alignBottom="@id/btnDelete"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/dismiss"
        android:textSize="@dimen/text_large" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDeleteWeight"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_toEndOf="@id/btnDismiss"
        android:backgroundTint="@color/red"
        android:text="@string/delete" />

</RelativeLayout>